@@ -1,3 +1,9 @@
+2019-12-21:
+
+- added complete JSLinux demo
+- RISC-V: added initrd support
+- RISC-V: fixed FMIN/FMAX instructions
+	
 2018-09-23:
 
 - added support for separate RISC-V BIOS and kernel
